fix: z-index of sidebar

--- a/ui/src/app/sidebar/sidebar.scss
+++ b/ui/src/app/sidebar/sidebar.scss
@@ -14,6 +14,7 @@
     z-index: 15;
     background-color: $silver-lining;
     overflow: scroll;
+    z-index: 0;
 
     &__logo {
         justify-content: center;
